--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,11 +15,11 @@
  <!-- Contenido -->
  <section>
 <b>Libros</b>
- <p>(Contenido de libros)</p>
+ <p>(Contenido de libros paso 9)</p>
 </section>
  <section>
 <b>Películas</b>
- <p>(Contenido)</p>
+ <p>(Contenido de peliculas paso 9)</p>
  </section>
  <!-- Pie de pagina -->
  <footer>
