Update movies and book issue#11

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -22,11 +22,11 @@
  </header>
  <section>
 <b>Libros</b>
- <p>(Contenido)</p>
+ <p>Los juegos del hambre</p>
 </section>
  <section>
 <b>Películas</b>
- <p>(Contenido)</p>
+ <p>Pulp Fiction</p>
  </section>
  <!-- Pie de pagina -->
  <footer>
